[package]
name = "web-backend"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
